--- a/objs/sample/ArrayTest/Makefile
+++ b/objs/sample/ArrayTest/Makefile
@@ -208,13 +208,13 @@ AUTOMAKE = automake-1.14
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS =  -g -DDEBUG -I "/usr/share/R/include"
+CFLAGS =  -O2 -I "/usr/share/R/include"
 CPP = gcc -E
 CPPFLAGS = 
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS =  -g -DDEBUG -I "/usr/share/R/include"
+CXXFLAGS =  -O2 -I "/usr/share/R/include"
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -329,7 +329,7 @@ lib_LTLIBRARIES = libArrayTest.la
 libArrayTest_la_LDFLAGS = -no-undefined
 libArrayTest_la_SOURCES = ../../../sample/ArrayTest/ArrayTest.cpp ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/ArrayTest_registration.cpp
 libArrayTest_la_LIBADD = ../../../src/ADLib/adtR.lo ../../../src/ADLib/ts_optim.lo ../../../src/ADLib/adtmaths.lo ../../../src/ADLib/adtarrays.lo ../../../src/ADLib/adtdiff.lo ../../../src/ADLib/adtstack.lo ../../../src/ADLib/adtthreads.lo ../../../src/ADLib/adtparallel.lo -L$(R_LIB) -lR -lblas -lpthread
-BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
+#BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -586,6 +586,7 @@ maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
 	-test -z "$(BUILT_SOURCES)" || rm -f $(BUILT_SOURCES)
+clean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libLTLIBRARIES clean-libtool clean-local \
@@ -674,11 +675,11 @@ uninstall-am: uninstall-libLTLIBRARIES
 	tags tags-am uninstall uninstall-am uninstall-libLTLIBRARIES
 
 
-../../../sample/ArrayTest/R_ArrayTest.cpp : ../../../sample/ArrayTest/ArrayTest.mk
-	../../../sample/ArrayTest/run_mk ArrayTest.mk
+#../../../sample/ArrayTest/R_ArrayTest.cpp : ../../../sample/ArrayTest/ArrayTest.mk
+#	../../../sample/ArrayTest/run_mk ArrayTest.mk
 
-clean-local:
-	-rm -f ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/AT_*.hpp ../../../sample/ArrayTest/ArrayTest.dch
+#clean-local:
+#	-rm -f ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/AT_*.hpp ../../../sample/ArrayTest/ArrayTest.dch
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
