--- a/objs/sample/ArrayTest/Makefile.am
+++ b/objs/sample/ArrayTest/Makefile.am
@@ -7,6 +7,7 @@ libArrayTest_la_LDFLAGS = -no-undefined
 libArrayTest_la_SOURCES = ../../../sample/ArrayTest/ArrayTest.cpp ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/ArrayTest_registration.cpp
 libArrayTest_la_LIBADD = ../../../src/ADLib/adtR.lo ../../../src/ADLib/ts_optim.lo ../../../src/ADLib/adtmaths.lo ../../../src/ADLib/adtarrays.lo ../../../src/ADLib/adtdiff.lo ../../../src/ADLib/adtstack.lo ../../../src/ADLib/adtthreads.lo ../../../src/ADLib/adtparallel.lo -L$(R_LIB) -lR -lblas -lpthread
 
+if WITH_TAPENADE
 BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
 
 ../../../sample/ArrayTest/R_ArrayTest.cpp : ../../../sample/ArrayTest/ArrayTest.mk
@@ -14,3 +15,4 @@ BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
 
 clean-local:
 	-rm -f ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/AT_*.hpp ../../../sample/ArrayTest/ArrayTest.dch
+endif
