--- a/objs/sample/Mseom/Makefile.in
+++ b/objs/sample/Mseom/Makefile.in
@@ -330,7 +330,7 @@ lib_LTLIBRARIES = libMseom.la
 libMseom_la_LDFLAGS = -no-undefined
 libMseom_la_SOURCES = ../../../sample/Mseom/Mseom.cpp ../../../sample/Mseom/MseomMin.cpp = ../../../sample/Mseom/D_Mseom.cpp ../../../sample/Mseom/D_MseomMin.cpp ../../../sample/Mseom/Mseom_registration.cpp
 libMseom_la_LIBADD = ../../../src/ADLib/adtR.lo ../../../src/ADLib/ts_optim.lo ../../../src/ADLib/adtmaths.lo ../../../src/ADLib/adtarrays.lo ../../../src/ADLib/adtdiff.lo ../../../src/ADLib/adtstack.lo ../../../src/ADLib/adtthreads.lo ../../../src/ADLib/adtparallel.lo -L$(R_LIB) -lR -lblas -lpthread
-BUILT_SOURCES = ../../../sample/Mseom/D_Mseom.cpp ../../../sample/Mseom/D_MseomMin.cpp
+@WITH_TAPENADE_TRUE@BUILT_SOURCES = ../../../sample/Mseom/D_Mseom.cpp ../../../sample/Mseom/D_MseomMin.cpp
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -594,6 +594,7 @@ maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
 	-test -z "$(BUILT_SOURCES)" || rm -f $(BUILT_SOURCES)
+@WITH_TAPENADE_FALSE@clean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libLTLIBRARIES clean-libtool clean-local \
@@ -682,14 +683,14 @@ uninstall-am: uninstall-libLTLIBRARIES
 	tags tags-am uninstall uninstall-am uninstall-libLTLIBRARIES
 
 
-../../../sample/Mseom/D_Mseom.cpp : ../../../sample/Mseom/Mseom.mk
-	../../../sample/Mseom/run_mk Mseom.mk
+@WITH_TAPENADE_TRUE@../../../sample/Mseom/D_Mseom.cpp : ../../../sample/Mseom/Mseom.mk
+@WITH_TAPENADE_TRUE@	../../../sample/Mseom/run_mk Mseom.mk
 
-../../../sample/Mseom/D_MseomMin.cpp : ../../../sample/Mseom/Mseom.mk
-	../../../sample/Mseom/run_mk Mseom.mk
+@WITH_TAPENADE_TRUE@../../../sample/Mseom/D_MseomMin.cpp : ../../../sample/Mseom/Mseom.mk
+@WITH_TAPENADE_TRUE@	../../../sample/Mseom/run_mk Mseom.mk
 
-clean-local:
-	-rm -f ../../../sample/Mseom/D_Mseom.cpp ../../../sample/Mseom/D_MseomMin.cpp ../../../sample/Mseom/Om_*.hpp ../../../sample/Mseom/OmB_*.hpp ../../../sample/Mseom/Mseom.dch
+@WITH_TAPENADE_TRUE@clean-local:
+@WITH_TAPENADE_TRUE@	-rm -f ../../../sample/Mseom/D_Mseom.cpp ../../../sample/Mseom/D_MseomMin.cpp ../../../sample/Mseom/Om_*.hpp ../../../sample/Mseom/OmB_*.hpp ../../../sample/Mseom/Mseom.dch
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
