--- a/objs/sample/ArrayTest/Makefile.in
+++ b/objs/sample/ArrayTest/Makefile.in
@@ -329,7 +329,7 @@ lib_LTLIBRARIES = libArrayTest.la
 libArrayTest_la_LDFLAGS = -no-undefined
 libArrayTest_la_SOURCES = ../../../sample/ArrayTest/ArrayTest.cpp ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/ArrayTest_registration.cpp
 libArrayTest_la_LIBADD = ../../../src/ADLib/adtR.lo ../../../src/ADLib/ts_optim.lo ../../../src/ADLib/adtmaths.lo ../../../src/ADLib/adtarrays.lo ../../../src/ADLib/adtdiff.lo ../../../src/ADLib/adtstack.lo ../../../src/ADLib/adtthreads.lo ../../../src/ADLib/adtparallel.lo -L$(R_LIB) -lR -lblas -lpthread
-BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
+@WITH_TAPENADE_TRUE@BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -586,6 +586,7 @@ maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
 	-test -z "$(BUILT_SOURCES)" || rm -f $(BUILT_SOURCES)
+@WITH_TAPENADE_FALSE@clean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libLTLIBRARIES clean-libtool clean-local \
@@ -674,11 +675,11 @@ uninstall-am: uninstall-libLTLIBRARIES
 	tags tags-am uninstall uninstall-am uninstall-libLTLIBRARIES
 
 
-../../../sample/ArrayTest/R_ArrayTest.cpp : ../../../sample/ArrayTest/ArrayTest.mk
-	../../../sample/ArrayTest/run_mk ArrayTest.mk
+@WITH_TAPENADE_TRUE@../../../sample/ArrayTest/R_ArrayTest.cpp : ../../../sample/ArrayTest/ArrayTest.mk
+@WITH_TAPENADE_TRUE@	../../../sample/ArrayTest/run_mk ArrayTest.mk
 
-clean-local:
-	-rm -f ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/AT_*.hpp ../../../sample/ArrayTest/ArrayTest.dch
+@WITH_TAPENADE_TRUE@clean-local:
+@WITH_TAPENADE_TRUE@	-rm -f ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/AT_*.hpp ../../../sample/ArrayTest/ArrayTest.dch
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
