Add template project changes
Add support for creating projects from templates targetting Visual C++
and gcc using automake and lib tool.

--- a/objs/sample/ArrayTest/Makefile.am
+++ b/objs/sample/ArrayTest/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES = libArrayTest.la
 libArrayTest_la_LDFLAGS = -no-undefined
 
 libArrayTest_la_SOURCES = ../../../sample/ArrayTest/ArrayTest.cpp ../../../sample/ArrayTest/R_ArrayTest.cpp ../../../sample/ArrayTest/ArrayTest_registration.cpp
-libArrayTest_la_LIBADD = ../../../src/ADLib/adtR.lo ../../../src/ADLib/ts_optim.lo ../../../src/ADLib/adtmaths.lo ../../../src/ADLib/adtarrays.lo ../../../src/ADLib/adtdiff.lo ../../../src/ADLib/adtstack.lo ../../../src/ADLib/adtthreads.lo ../../../src/ADLib/adtparallel.lo -L$(R_LIB) -lR -lblas -lpthread
+libArrayTest_la_LIBADD = -L../../ADLib -lADLib -lADLibR -L$(R_LIB) -lR -lblas -lpthread
 
 if WITH_TAPENADE
 BUILT_SOURCES = ../../../sample/ArrayTest/R_ArrayTest.cpp
